--- a/_data/template.yml
+++ b/_data/template.yml
@@ -8,5 +8,5 @@ color:
 
 # Font Families
 font:
-  primary: 'Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif'
+  primary: '"Lato", "Helvetica Neue", Helvetica,Arial,sans-serif'
   secondary: '"Lato", "Helvetica Neue", Helvetica,Arial,sans-serif'
