--- a/_data/about.yml
+++ b/_data/about.yml
@@ -9,7 +9,7 @@
     img: 2.jpg
     pos: right
     heading: Digitalisaatio
-    subheading: tulee terveydenhuoltoon vauhdilla. Sen vaatimat ratkaisut eivät synny yksin tekemällä.
+    subheading: valtaa terveydenhuoltoa vauhdilla. Sen vaatimat ratkaisut eivät synny yksin tekemällä.
     text: Nopea reagointi uusiin haasteisiin vaatii skaalautumiskykyä. Acute Marketista
           löytyy valmiita ratkaisuja ja kokeneita konsultteja.
 
