Changes from the NIna's review. Acute + Vitec website styles adapted.

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ destination: _site
 title: Acute Market
 copyright: Vitec Software Group, Health
 email: myynti@vitecsoftware.com
-quote: If you can dream it, you can do it
+quote: 
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
