Partners page committed.

--- a/_data/about.yml
+++ b/_data/about.yml
@@ -2,14 +2,14 @@
     img: 5.png
     pos: left
     heading: Haluamme
-    subheading: edistää monitoimijakulttuuria terveydenhuollon tietojärjestelmien kehittämisessä.
+    subheading: edistää monitoimijakulttuuria.
     text: Yhdessä tekemällä syntyy enemmän uusia ajatuksia ja uuden kehittäminen on nopeampaa.
 
 - subject:
     img: 4.png
     pos: right
     heading: Digitalisaatio
-    subheading: valtaa terveydenhuoltoa vauhdilla. Sen vaatimat ratkaisut eivät synny yksin tekemällä.
+    subheading: valtaa terveydenhuoltoa vauhdilla.
     text: Nopea reagointi uusiin haasteisiin vaatii skaalautumiskykyä. Acute Marketista
           löytyy valmiita ratkaisuja ja kokeneita konsultteja.
 
