--- a/_data/about.yml
+++ b/_data/about.yml
@@ -8,8 +8,8 @@
 - subject:
     img: 4.png
     pos: right
-    heading: Digitalisaatio
-    subheading: valtaa terveydenhuoltoa vauhdilla.
+    heading: Näemme 
+    subheading: että digitalisaatio muuttaa terveydenhuoltoa.
     text: Nopea reagointi uusiin haasteisiin vaatii skaalautumiskykyä. Acute Marketista
           löytyy valmiita ratkaisuja ja kokeneita konsultteja.
 
@@ -18,7 +18,9 @@
     pos: left
     heading: Uskomme
     subheading: erilaisuuteen ja erikoistumiseen.
-    text: Me kehitämme Acutea tuotepohjaisesti, mutta ymmärrämme, että yksi tuote ei koskaan voi
-          vastata kaikkiin haasteisiin, joissa tämän päivän digitalisoituva terveydenhuolto elää.
+    text: Kehitämme Acutea tuotepohjaisesti, mutta ymmärrämme, ettei yksi tuote voi
+          vastata kaikkiin haasteisiin, joiden keskellä tämän päivän terveydenhuollon toimijat elävät.
+          Kilpailukyky löytyy erilaisuudesta ja edelläkävijyydestä.
+
 
 
