--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -8,7 +8,7 @@
   img: csam_logo.png
   slogan: Caring for life
   text: Enabling excellent healthcare through innovative software solutions.
-  link: csamhealth.com
+  link: http://www.csamhealth.com
 
 - partner: Santa Margarita
   img: stm_logo.jpg
