Product and partner description additions and changes

--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -20,8 +20,11 @@
 - partner: Pengon
   img: pengon_logo.png
   logobg: 36404a
-  slogan: Tiedosta tulosta
-  text: Koulutamme yrityksenne henkilöstön erilaisten raportointiratkaisujen saloihin sekä opastamme, kuinka henkilöstö voi tuottaa omia raportteja itsenäisesti.
+  slogan: Pengon on Business Intelligence -ratkaisujen luotettava kumppani
+  text: Parannamme terveydenhuollon toimijoiden tietojohtamista ja tuottavuutta yhdistämällä 
+    tärkeät tiedot havainnollisesti sekä ymmärrettävästi saataville.
+    Tarjoamme asiakkaillemme analytiikan vankkaa osaamista sekä markkinoiden edistyneimmät ja 
+    helppokäyttöisimmat teknologiat.
   link: http://www.pengon.fi/
 
 
