--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -29,7 +29,7 @@
 
 
 - partner: Movendos
-  img: movendos_logo_rev2017.png
+  img: movendos_logo_rev2017_transparent.png
   slogan: Digitaalisia ratkaisuja yksilön hyvinvoinnin ja terveyden edistämiseen.
   text: Toteutamme räätälöityjä digitaalisia ratkaisuja, jotka mahdollistavat kustannustehokkaat 
     palvelut ja hyvän asiakaskokemuksen. Tarjoamme palveluja esimerkiksi ajanvaraukseen, 
