--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -52,3 +52,15 @@
   text: Ratkaisu määrämuotoisen tiedonkeruun tarpeisiin.
   link: http://www.kotopro.com/
 
+- partner: X-akseli
+  img: x-akseli-logo.png
+  slogan: Terveydenhuoltosektorin tarpeisiin erikoistunut IT-järjestelmätoimittaja
+  text: "Olemme vuonna 2008 perustettu terveydenhuoltosektorin tarpeisiin erikoistunut IT-järjestelmätoimittaja. 
+    Yrityksemme ja tuotteidemme vahvuus asiakasvirran hallinnassa ja terveydenhuollon toiminnan optimoinnissa kumpuaa kokemuksestamme: 
+    niistä tuhansista tunneista, jotka olemme viettäneet asiakkaillamme nimenomaan näihin asioihin liittyviä ongelmia ratkoen.
+    Tarjoamiamme terveydenhuollon ratkaisuja ovat muun muassa:<br>
+    •	Akseli- asiakasvirran hallintajärjestelmä<br>
+    •	Akseli-info- ja ovinäyttöjärjestelmä<br>
+    •	RANNE®-potilasranneketulostusratkaisu<br>
+    •	Konsultointi (terveydenhuollon prosessit, asiakasvirrat)"
+
