X-akseli material tuning

--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -54,13 +54,10 @@
 
 - partner: X-akseli
   img: x-akseli-logo.png
-  slogan: Terveydenhuoltosektorin tarpeisiin erikoistunut IT-järjestelmätoimittaja
-  text: "Olemme vuonna 2008 perustettu terveydenhuoltosektorin tarpeisiin erikoistunut IT-järjestelmätoimittaja. 
-    Yrityksemme ja tuotteidemme vahvuus asiakasvirran hallinnassa ja terveydenhuollon toiminnan optimoinnissa kumpuaa kokemuksestamme: 
-    niistä tuhansista tunneista, jotka olemme viettäneet asiakkaillamme nimenomaan näihin asioihin liittyviä ongelmia ratkoen.
-    Tarjoamiamme terveydenhuollon ratkaisuja ovat muun muassa:<br>
-    •	Akseli- asiakasvirran hallintajärjestelmä<br>
-    •	Akseli-info- ja ovinäyttöjärjestelmä<br>
-    •	RANNE®-potilasranneketulostusratkaisu<br>
-    •	Konsultointi (terveydenhuollon prosessit, asiakasvirrat)"
+  slogan: Yhteistyöllä tehokkuutta terveydenhuollon IT-ratkaisuihin
+  text: "Yrityksemme ja tuotteidemme vahvuus kumpuaa kokemuksestamme: 
+    niistä tuhansista tunneista, jotka olemme viettäneet asiakkaillamme rakentaen 
+    ratkaisuja terveydenhuollon toiminnan optimoimtiin. Tarjomiamme ratkaisuja 
+    ovat mm. asiakasvirran hallintajärjestelmä, info- ja ovinäyttöjärjestelmät, 
+    potilasranneketulostus sekä konsultointi."
 
