Kaiku Health added

--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -60,4 +60,12 @@
     ratkaisuja terveydenhuollon toiminnan optimoimtiin. Tarjomiamme ratkaisuja 
     ovat mm. asiakasvirran hallintajärjestelmä, info- ja ovinäyttöjärjestelmät, 
     potilasranneketulostus sekä konsultointi."
+  link: http://http://www.x-akseli.fi/
 
+- partner: Kaiku Health
+  img: KAIKU_LOGO_RGB.png
+  slogan: Digitaalista potilasseurantaa
+  text: "Kaiku Health on vuonna 2012 perustettu suomalainen yritys, 
+    joka kehittää digitaalista potilasseurantaa sekä erityissairaanhoitoon 
+    että ennaltaehkäisevään terveydenhuoltoon. "
+  link: http://www.kaikuhealth.com/
