Added Medixine products

--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -69,3 +69,15 @@
     joka kehittää digitaalista potilasseurantaa sekä erityissairaanhoitoon 
     että ennaltaehkäisevään terveydenhuoltoon. "
   link: http://www.kaikuhealth.com/
+
+- partner: Medixine
+  img: medixine_logo.png
+  slogan:
+  text: "Medixinessä yhdistyy terveydenhuollon sekä modernien web- ja mobiiiteknologioiden 
+    erikoisosaaminen, jonka ansioista voimme tarjota turvallisia ja helppokäyttöisiä potilaskeskeisiä 
+    ratkaisuja.  
+    Ratkaisumme mahdollistavat mutkattoman kommunikaation terveydenhuollon ammattilaisten, 
+    potilaiden ja omaisten välillä. Tarjoamme kattavat työkalut eri tietolähteiden 
+    yhdistämiseen ja terveydenhuollon prosessien tehostamiseen. 
+    Autamme kumppaneitamme ja asiakkaitamme parantamaan hoidon laatua ja toimimaan 
+    kustannustehokkaammin."
