More Medixine products.

--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -72,12 +72,9 @@
 
 - partner: Medixine
   img: medixine_logo.png
-  slogan:
+  slogan: Kaikki mitä tarvitset sähköiseen asiointiin
   text: "Medixinessä yhdistyy terveydenhuollon sekä modernien web- ja mobiiiteknologioiden 
-    erikoisosaaminen, jonka ansioista voimme tarjota turvallisia ja helppokäyttöisiä potilaskeskeisiä 
-    ratkaisuja.  
-    Ratkaisumme mahdollistavat mutkattoman kommunikaation terveydenhuollon ammattilaisten, 
-    potilaiden ja omaisten välillä. Tarjoamme kattavat työkalut eri tietolähteiden 
-    yhdistämiseen ja terveydenhuollon prosessien tehostamiseen. 
-    Autamme kumppaneitamme ja asiakkaitamme parantamaan hoidon laatua ja toimimaan 
-    kustannustehokkaammin."
+    erikoisosaaminen. Turvalliset ja helppokäyttöiset ratkaisumme tarjoavat kattavat työkalut 
+    kommunikaatioon ja potilaiden itsepalveluun. 
+    Autamme kumppaneitamme ja asiakkaitamme parantamaan hoidon laatua, tehostamaan prosesseja 
+    ja toimimaan kustannustehokkaammin."
