--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -78,3 +78,12 @@
     kommunikaatioon ja potilaiden itsepalveluun. 
     Autamme kumppaneitamme ja asiakkaitamme parantamaan hoidon laatua, tehostamaan prosesseja 
     ja toimimaan kustannustehokkaammin."
+  link: http://www.medixine.com/
+
+- partner: Crasman
+  img: crasman-logo-acute-market.png
+  slogan: Digitaalisen liiketoiminnan ratkaisujen suunnittelija ja toteuttaja
+  text: "Suunnittelemme ja toteutamme edistyineitä digitaalisia palveluita ja digitaalisen 
+    ostamisen ratkaisuja asiakkaillemme. Vahvuuksiamme ovat laaja integraatio-osaaminen 
+    ja asiakaskokemuksen suunnittelu."
+  link: https://www.crasman.fi
