--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -2,7 +2,7 @@
   img: vitec_logo.svg
   slogan: Ekosysteemi täynnä ratkaisuja ja mahdollisuuksia
   text: Acusfäärissä rakennetaan digitaalisen terveydenhuollon yhteistä tulevaisuutta. Ota homma haltuun, me autamme.
-  link: https://acute.fi
+  link: http://acute.fi
 
 - partner: CSAM Health
   img: csam_logo.png
@@ -15,7 +15,7 @@
   slogan: Visionary software solutions
   text: Suunnittelemme ja toteutamme vaativia räätälöityjä ratkaisuja teollisuuteen, terveydenhuoltoon ja palvelusektorille. 
     Käytämme tehokkaita ja nykyaikaisia kehitysvälineitä.
-  link: http:/santamargarita.fi
+  link: http://santamargarita.fi
 
 - partner: Pengon
   img: pengon_logo.png
