--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -60,7 +60,7 @@
     ratkaisuja terveydenhuollon toiminnan optimoimtiin. Tarjomiamme ratkaisuja 
     ovat mm. asiakasvirran hallintajärjestelmä, info- ja ovinäyttöjärjestelmät, 
     potilasranneketulostus sekä konsultointi."
-  link: http://http://www.x-akseli.fi/
+  link: http://www.x-akseli.fi/
 
 - partner: Kaiku Health
   img: KAIKU_LOGO_RGB.png
