Evolvit renamed to Profit Software

--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -38,13 +38,13 @@
     käyttäytymis- ja terveystieteen tutkimukseen sekä yhteistyöhön alan asiantuntijoiden kanssa.
   link: http://www.movendos.com/
 
-- partner: Evolvit
-  img: evolvit_logo.svg
-  slogan: Espoo | Tampere | Lahti | Jyväskylä
-  text: Asiakkaamme valitsevat meidät, kun he tarvitsevat luotettavimman kumppanin strategisesti 
-    tärkeään IT-hankkeeseen tai järjestelmään. 
-    Tarjoamme huippuluokan asiakaskokemuksen ja yrityksesi menestymistä tukevaa liiketoimintaosaamista.
-  link: http://www.evolvit.fi/
+- partner: Profit Software
+  img: profit_software_logo_RGB.svg
+  slogan: Espoo | Tampere | Pori | Lahti | Tukholma | Tallinna
+  text: Erilaiset tiedolla johtamisen ratkaisut ovat erikoisalaamme. Olemme auttaneet lukuisia 
+    asiakkaitamme ottamaan uuden askeleen nykyaikaisten analytiikkaratkaisujen avulla – me 
+    ymmärrämme asiakkaidemme liiketoimintaa ja teemme tiedosta toiminnan kehittämisen välineen.
+  link: https://profitsoftware.com/
 
 - partner: Kotopro
   img: kotopro_logo.jpg
