--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -87,3 +87,9 @@
     ostamisen ratkaisuja asiakkaillemme. Vahvuuksiamme ovat laaja integraatio-osaaminen 
     ja asiakaskokemuksen suunnittelu."
   link: https://www.crasman.fi
+
+- partner: Carecode
+  img: carecode_logo.png
+  slogan: Terveydenhuollon kommunikaatio
+  text: "Kotimainen Carecode kehittää tietoturvallista ja helppokäyttöistä kommunikaatiopalvelua ratkaisemaan terveydenhuollon viestinnän haasteita."
+  link: https://carecode.fi
