--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -102,3 +102,11 @@
     kokemukseen laajoista konsultointiprojekteista. Asiantuntijapalvelumme pitävät 
     sisällään Red Hat -palvelut sekä Netorekin ohjelmisto- ja asiantuntijapalvelut."
   link: https://www.vihta.com
+
+- partner: Diktamen
+  img: logo-diktamen.gif
+  slogan: Diktamen nopeuttaa potilastietojen kirjaamista ja vapauttaa aikaa tietojärjestelmien käytöstä hoitotyöhön.
+  text: "Diktamen tarjoaa markkinoiden monipuolisimman järjestelmän ja joustavimman 
+    sanelunpurkupalvelun potilastietojen tuottamiseen. Palvelumme nopeuttaa kirjausten 
+    tekemistä potilastietojärjestelmiin ja ammattilaisten aikaa vapautuu hoitotyöhön."
+  link: https://diktamen.com/
