--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -110,3 +110,11 @@
     sanelunpurkupalvelun potilastietojen tuottamiseen. Palvelumme nopeuttaa kirjausten 
     tekemistä potilastietojärjestelmiin ja ammattilaisten aikaa vapautuu hoitotyöhön."
   link: https://diktamen.com/
+
+- partner: Physiotools
+  img: physiotools-lowres.png
+  slogan: Paras tapa laatia yksilöllisiä harjoitusohjelmia
+  text: "PhysioToolsilla laadit yksilöllisiä harjoitusohjelmia nopeasti ja helposti, 
+    valitset harjoitteet laajasta valikoimasta erikoisaloja ja motivoit asiakkaitasi harjoittelemaan."
+  link: http://www.physiotools.fi
+  
