--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -117,4 +117,11 @@
   text: "PhysioToolsilla laadit yksilöllisiä harjoitusohjelmia nopeasti ja helposti, 
     valitset harjoitteet laajasta valikoimasta erikoisaloja ja motivoit asiakkaitasi harjoittelemaan."
   link: http://www.physiotools.fi
+
+- partner: Kustannus Oy Duodecim 
+  img: DUODECIM_logo.png
+  slogan: 
+  text: Kustannus Oy Duodecim on julkaissut jo vuodesta 1881 asti laadukasta suomenkielistä tietosisältöä terveydenhuollon ammattilaisille. Duodecim tuottaa myös kansalaisille luotettavaa ja ymmärrettävää tietoa terveydestä ja sairauksista. 
+    Duodecimin digitaalisia tuotteita ovat Terveysportti, Oppiportti, Päätöksentuki EBMeDS ja Kansalaisen sähköiset palvelut.
+  link: https://www.duodecim.fi/kustannus/
   
