--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -126,4 +126,10 @@
   slogan: Lähde mukaan matkalle kohti tulevaisuuden hoitopalveluita
   text: Visiba Care on e-terveysalusta, jolla Suomen hoitoalan palveluntarjoajat voivat avata omia digitaalisia vastaanottojaan. Kehitämme yhdessä kestäviä hoitopalveluita, joita on helppo käyttää ja jotka ovat kaikkien saatavilla.
   link: https://www.visibacare.com/
+
+- partner: Nordic Healthcare Group
+  img: NHG_LOGO.png
+  slogan: Yhdessä vaikuttavampia palveluita
+  text: Autamme asiakkaitamme kehittämään vaikuttavia tulevaisuuden sosiaali- ja terveyspalveluita. Yhdistämme toiminnassamme analytiikka- ja dataosaamisen asiakaslähtöiseen palvelujen muotoiluun.
+  link: https://nhg.fi/
   
