Fixed all sales e-mail addresses

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ destination: _site
 # Site settings
 title: Acute Market
 copyright: Vitec Software Group, Health
-email: myynti@vitecsoftware.com
+email: myynti.acute@vitecsoftware.com
 quote: 
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
