--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -132,4 +132,12 @@
   slogan: Yhdessä vaikuttavampia palveluita
   text: Autamme asiakkaitamme kehittämään vaikuttavia tulevaisuuden sosiaali- ja terveyspalveluita. Yhdistämme toiminnassamme analytiikka- ja dataosaamisen asiakaslähtöiseen palvelujen muotoiluun.
   link: https://nhg.fi/
+
+- partner: Digiasiaintoimisto
+  img: digiasiaintoimisto.png
+  slogan: Acusfäärin parasta integraatio-osaamista
+  text: "Kun tavoitteenasi on Acute-integraatio, niin Digiasiaintoimistosta löydät tukea ja apua. Olemme pieni ja tehokas tiimi, jolla on  
+    vuosien kokemus Acute-ympäristöstä. Autamme ratkaisujen ideoinnissa ja kartoituksessa, teknisessä suunnittelussa ja toteutuksessa.  
+    Siis koko integraation läpiviennissä alusta loppuun. Meillä on myös kyky toteuttaa uusia Acuten API-rajapinnan palveluja."
+  link: https://digiasiaintoimisto.com/
   
