Digiasiaintoimisto logo fixed, categories fixed

--- a/_data/partnerlist.yml
+++ b/_data/partnerlist.yml
@@ -134,10 +134,11 @@
   link: https://nhg.fi/
 
 - partner: Digiasiaintoimisto
-  img: digiasiaintoimisto.png
+  img: digiasiaintoimisto_logo_small.png
   slogan: Acusfäärin parasta integraatio-osaamista
   text: "Kun tavoitteenasi on Acute-integraatio, niin Digiasiaintoimistosta löydät tukea ja apua. Olemme pieni ja tehokas tiimi, jolla on  
     vuosien kokemus Acute-ympäristöstä. Autamme ratkaisujen ideoinnissa ja kartoituksessa, teknisessä suunnittelussa ja toteutuksessa.  
-    Siis koko integraation läpiviennissä alusta loppuun. Meillä on myös kyky toteuttaa uusia Acuten API-rajapinnan palveluja."
+    Siis koko integraation läpiviennissä alusta loppuun. Meillä on myös kyky toteuttaa uusia Acuten API-rajapinnan palveluja ja 
+    Acute Tietokantakyselyjä."
   link: https://digiasiaintoimisto.com/
   
